--- a/index.html
+++ b/index.html
@@ -186,10 +186,10 @@
   <main class="container">
     <section class="ebooks-grid">
       <!-- 1. Rich Dad Poor Dad -->
-      <a href="Rich_Dad_Poor_Dad/book_details_page.html" class="ebook-card">
+      <a href="book_details_page.html" class="ebook-card">
         <div class="ebook-cover">
           <img
-            src="Rich_Dad_Poor_Dad/Cover_Image.png"
+            src="Cover_Image.png"
             alt="Rich Dad Poor Dad"
             loading="lazy"
           />
@@ -203,7 +203,7 @@
       <a href="#sample-ebook" class="ebook-card">
         <div class="ebook-cover">
           <img
-            src="The_Secret/Cover_Image.png"
+            src="Cover_Image.png"
             alt="The Secret"
             loading="lazy"
           />
@@ -236,5 +236,6 @@
 
 </body>
 </html>
+
 
 
