--- a/book_details_page.html
+++ b/book_details_page.html
@@ -261,7 +261,7 @@ audio {
 <body>
 
 <header class="top-bar">
-  <a href="../index.html" class="home-link" aria-label="Home">
+  <a href="index.html" class="home-link" aria-label="Home">
     <span class="material-symbols-outlined">home</span>
   </a>
   <div class="logo">
@@ -340,3 +340,4 @@ function showSection(id, btn) {
 
 </body>
 </html>
+
