Fix HTML formatting and update ebook links

--- a/index.html
+++ b/index.html
@@ -190,10 +190,10 @@
   <main class="container">
     <section class="ebooks-grid">
       <!-- 1. Rich Dad Poor Dad -->
-      <a href="Rich_Dad_Poor_Dad/book_details_page.html" class="ebook-card">
+      <a href="book_details_page.html" class="ebook-card">
         <div class="ebook-cover">
           <img
-            src="Rich_Dad_Poor_Dad/Cover_Image.png"
+            src="Cover_Image.png"
             alt="Rich Dad Poor Dad"
             loading="lazy"
           />
@@ -234,5 +234,6 @@
 
 </body>
 </html>
+
 
 
