Fix HTML encoding issues in book details page

--- a/book_details_page.html
+++ b/book_details_page.html
@@ -282,13 +282,13 @@ audio {
 <body>
 
 <header class="top-bar">
-  <a href="../index.html" class="home-link" aria-label="Home">
+  <a href="index.html" class="home-link" aria-label="Home">
     <span class="material-symbols-outlined">home</span>
   </a>
 
   <div class="logo">
     <div class="logo-icon">
-      <img src="../tiwonk_logo.jpeg" alt="tiwonk logo">
+      <img src="tiwonk_logo.jpeg" alt="tiwonk logo">
     </div>
     tiwonk
   </div>
@@ -383,4 +383,5 @@ function showSection(id, btn) {
 </script>
 
 </body>
+
 </html>
