--- a/index.html
+++ b/index.html
@@ -1,239 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>tiwonk | Home</title>
-
-  <!-- Material Icons Outlined -->
-  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
-
-  <style>
-    :root {
-      --blue-main: #0d47ff;
-      --blue-soft: #e8edff;
-      --text-dark: #1a1a1a;
-      --card-bg: #ffffff;
-    }
-
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-    }
-
-    body {
-      background: var(--blue-soft);
-      color: var(--text-dark);
-      padding-top: 64px;
-      padding-bottom: 72px;
-    }
-
-    /* Top Bar */
-    .top-bar {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 64px;
-      background: #fff;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.08);
-      z-index: 1000;
-    }
-
-    .logo {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      font-size: 1.4rem;
-      font-weight: 700;
-      color: var(--blue-main);
-    }
-
-    /* 🔵 UPDATED LOGO ICON (Replace logo.png later) */
-    .logo-icon {
-      width: 36px;
-      height: 36px;
-      border-radius: 10px;
-      background: linear-gradient(135deg, var(--blue-main), #5c7cff);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      overflow: hidden;
-    }
-
-    .logo-icon img {
-      width: 100%;
-      height: 100%;
-      object-fit: contain;
-    }
-
-    /* Main Content */
-    .container {
-      padding: 16px;
-      max-width: 1200px;
-      margin: auto;
-    }
-
-    .ebooks-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-      gap: 16px;
-    }
-
-    .ebook-card {
-      display: flex;
-      flex-direction: column;
-      background: var(--card-bg);
-      border-radius: 16px;
-      overflow: hidden;
-      box-shadow: 0 6px 20px rgba(0,0,0,0.08);
-      text-decoration: none;
-      color: inherit;
-      transition: transform 0.2s ease, box-shadow 0.2s ease;
-    }
-
-    .ebook-card:hover {
-      transform: translateY(-4px);
-      box-shadow: 0 10px 28px rgba(0,0,0,0.12);
-    }
-
-    .ebook-cover {
-      width: 100%;
-      aspect-ratio: 2 / 3;
-      background: #fff;
-      display: flex;
-      overflow: hidden;
-    }
-
-    .ebook-cover img {
-      max-width: 100%;
-      max-height: 100%;
-      object-fit: cover;
-      display: block;
-    }
-
-    .ebook-info {
-      padding: 12px;
-      text-align: center;
-    }
-
-    .ebook-title {
-      font-size: 0.95rem;
-      font-weight: 600;
-    }
-
-    /* Bottom Navigation */
-    .bottom-nav {
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      height: 72px;
-      background: #fff;
-      display: flex;
-      justify-content: space-around;
-      align-items: center;
-      box-shadow: 0 -2px 10px rgba(0,0,0,0.08);
-      z-index: 1000;
-    }
-
-    .nav-btn {
-      text-decoration: none;
-      color: var(--blue-main);
-      width: 48px;
-      height: 48px;
-      border-radius: 14px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      transition: background 0.2s ease;
-      font-size: 28px;
-    }
-
-    .nav-btn:hover {
-      background: var(--blue-soft);
-    }
-
-    .material-symbols-outlined {
-      font-variation-settings:
-        'FILL' 0,
-        'wght' 400,
-        'GRAD' 0,
-        'opsz' 24;
-    }
-
-    @media (min-width: 768px) {
-      .ebooks-grid {
-        grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
-      }
-    }
-  </style>
-</head>
-<body>
-
-  <!-- Top Header -->
-  <header class="top-bar">
-    <div class="logo">
-      <div class="logo-icon">
-        <img src="tiwonk_logo.jpeg" alt="tiwonk logo">
-      </div>
-      tiwonk
-    </div>
-  </header>
-
-  <!-- Main Content -->
-  <main class="container">
-    <section class="ebooks-grid">
-      <!-- 1. Rich Dad Poor Dad -->
-      <a href="book_details_page.html" class="ebook-card">
-        <div class="ebook-cover">
-          <img
-            src="Cover_Image.png"
-            alt="Rich Dad Poor Dad"
-            loading="lazy"
-          />
-        </div>
-        <div class="ebook-info">
-          <div class="ebook-title">Rich Dad Poor Dad</div>
-        </div>
-      </a>
-
-      <!-- 2. The Secret -->
-      <!--<a href="#sample-ebook" class="ebook-card">
-        <div class="ebook-cover">
-          <img
-            src="The_Secret/Cover_Image.png"
-            alt="The Secret"
-            loading="lazy"
-          />
-        </div>
-        <div class="ebook-info">
-          <div class="ebook-title">The Secret</div>
-        </div>
-      </a>-->
-    </section>
-  </main>
-
-  <!-- Bottom Navigation -->
-  <nav class="bottom-nav">
-    <a href="about.html" class="nav-btn" aria-label="About">
-      <span class="material-symbols-outlined">info</span>
-    </a>
-    <a href="https://forms.gle/HSN9CrXaTRExcobV6" class="nav-btn" aria-label="Express Your Feelings">
-      <span class="material-symbols-outlined">favorite</span>
-    </a>
-    <a href="https://forms.gle/4iR8dfP6jTQJxwo5A" class="nav-btn" aria-label="Join Our Community">
-      <span class="material-symbols-outlined">groups</span>
-    </a>
-  </nav>
-
-</body>
-</html>
+<p style="white-space: nowrap;">WORKING NO UPDATES...</p>
+<p style="white-space: nowrap;">TIWONK IS UPDATING ITS CODE AND FILE STRUCTURE. PLEASE WAIT OR REVISIT AT 18:50 (IST, 5:30+ GMT)</p>
+<p style="white-space: nowrap;">SOORY FOR THE ISSUE :( </p>
 
 
 
