Update maintenance message in index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-<p style="white-space: nowrap;">WORKING NO UPDATES...</p>
-<p style="white-space: nowrap;">TIWONK IS UPDATING ITS CODE AND FILE STRUCTURE. PLEASE WAIT OR REVISIT AT 18:50 (IST, 5:30+ GMT)</p>
+<p style="white-space: nowrap;">WORKING ON UPDATES...</p>
+<p style="white-space: nowrap;">TIWONK IS UPDATING ITS CODE AND FILE STRUCTURE. PLEASE WAIT OR REVISIT AT 18:55 (IST, 5:30+ GMT)</p>
 <p style="white-space: nowrap;">SOORY FOR THE ISSUE :( </p>
+
 
 
 
