--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <p style="white-space: nowrap;">WORKING ON UPDATES...</p>
-<p style="white-space: nowrap;">TIWONK IS UPDATING ITS CODE AND FILE STRUCTURE. PLEASE WAIT OR REVISIT AT 18:55 (IST, 5:30+ GMT)</p>
+<p style="white-space: nowrap;">TIWONK IS UPDATING ITS CODE AND FILE STRUCTURE. PLEASE WAIT OR REVISIT AFTER SOME TIME</p>
 <p style="white-space: nowrap;">SOORY FOR THE ISSUE :( </p>
 
 
